# ProjSupercomp

./: CMakeLists.txt  funcs.cpp  funcs.h  output_O0.csv  output_O2.csv  output_O3.csv  parte0.cpp  relatorio.ipynb
